refactor, fix Dockerfile

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -2,8 +2,8 @@ FROM python:3.9
 
 RUN mkdir -p /opt/availability-updater
 
-COPY src/py/ElasticAvailabilityGenerator.py /opt/availability-updater/src/py/ElasticAvailabilityGenerator.py
-COPY src/py/generate-availability.py /opt/availability-updater/src/py/generate-availability.py
+COPY src/py/elastic_availability_generator.py /opt/availability-updater/src/py/elastic_availability_generator.py
+COPY src/py/generate_availability.py /opt/availability-updater/src/py/generate_availability.py
 
 COPY requirements.txt /tmp/requirements.txt
 RUN pip3 install -r /tmp/requirements.txt
@@ -13,6 +13,7 @@ WORKDIR /opt/availability-updater
 RUN mkdir availability_input
 RUN mkdir availability_output
 RUN mkdir elastic_ontology
+COPY src/resources/stratum-to-context.json /opt/availability-updater/availability_input
 
 RUN chown -R 10001:10001 /opt/availability-updater
 
