--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -2,18 +2,29 @@ services:
   availability-updater:
     image: ghcr.io/medizininformatik-initiative/dataportal-availability-updater:0.1.1
     environment:
-      - ONTO_REPO=${ONTO_REPO:-https://github.com/medizininformatik-initiative/fhir-ontology-generator/releases/download}
-      - ONTO_GIT_TAG=${ONTO_GIT_TAG:-v8.3.1}
-      - ONTOLOGY_DIR=${ONTOLOGY_DIR:-/opt/availability-updater/elastic_ontology}
-      - UPDATE_ONTOLOGY=${UPDATE_ONTOLOGY:-true}
-      - AVAILABILITY_INPUT_DIR=${AVAILABILITY_INPUT_DIR:-/opt/availability-updater/availability_input}
-      - AVAILABILITY_MASTER_IDENT=${AVAILABILITY_MASTER_IDENT:-"fdpg-data-availability-report-obfuscated"}
-      - AVAILABILITY_OUTPUT_DIR=${AVAILABILITY_OUTPUT_DIR:-/opt/availability-updater/availability_output}
-      - AVAILABILITY_REPORT_SERVER_BASE_URL=${AVAILABILITY_REPORT_SERVER_BASE_URL:-http://availability-report-store:8080/fhir}
-      - ES_BASE_URL=${ES_BASE_URL:-http://availability-dataportal-elastic:9200}
-      - MIN_N_REPORTS=${MIN_N_REPORTS:-"3"}
-      - ES_INDEX=${ES_INDEX:-ontology}
-      - LOGLEVEL=${LOGLEVEL:-INFO}
+    - ONTO_REPO=${ONTO_REPO:-https://github.com/medizininformatik-initiative/fhir-ontology-generator/releases/download}
+    - ONTO_GIT_TAG=${ONTO_GIT_TAG:-v8.3.1}
+    - ONTOLOGY_DIR=${ONTOLOGY_DIR:-/opt/availability-updater/elastic_ontology}
+    - UPDATE_ONTOLOGY=${UPDATE_ONTOLOGY:-true}
+    - AVAILABILITY_INPUT_DIR=${AVAILABILITY_INPUT_DIR:-/opt/availability-updater/availability_input}
+    - AVAILABILITY_MASTER_IDENT=${AVAILABILITY_MASTER_IDENT:-"fdpg-data-availability-report-obfuscated"}
+    - AVAILABILITY_OUTPUT_DIR=${AVAILABILITY_OUTPUT_DIR:-/opt/availability-updater/availability_output}
+    - AVAILABILITY_REPORT_SERVER_BASE_URL=${AVAILABILITY_REPORT_SERVER_BASE_URL:-http://availability-report-store:8080/fhir}
+    - ES_BASE_URL=${ES_BASE_URL:-http://availability-dataportal-elastic:9200}
+    - MIN_N_REPORTS=${MIN_N_REPORTS:-"3"}
+    - ES_INDEX=${ES_INDEX:-ontology}
+    - LOGLEVEL=${LOGLEVEL:-INFO}
+    # --- Authentication configuration ---
+    - USE_OAUTH2=${USE_OAUTH2:-false}
+    - OAUTH_TOKEN_URL=${OAUTH_TOKEN_URL:-}
+    - OAUTH_CLIENT_ID=${OAUTH_CLIENT_ID:-}
+    - OAUTH_CLIENT_SECRET=${OAUTH_CLIENT_SECRET:-}
+    - OAUTH_SCOPE=${OAUTH_SCOPE:-}
+    - USE_BASIC_AUTH=${USE_BASIC_AUTH:-false}
+    - BASIC_USERNAME=${BASIC_USERNAME:-}
+    - BASIC_PASSWORD=${BASIC_PASSWORD:-}
+    volumes:
+      - "./auth:/opt/availability-updater/auth"
   availability-report-store:
     image: "samply/blaze:0.31"
     environment:
